package apsas.content.model.entity;

public enum AssignmentStatus {
  DRAFT,
  PUBLISHED,
  ARCHIVED
}
