package apsas.content.model.entity;

public enum DifficultyLevel {
  EASY,
  MEDIUM,
  HARD
}
